API ChangeLog 

* Release 1.5.11 *

14-May-2008	Troy A. Griffitts <scribe@crosswire.org>
	Added ability for lexicon drivers to accept
		####![a-z] as strong number.

13-May-2008	Chris Little <chrislit@crosswire.org>
	Added basic TEIRTF filters
	Added tei2mod utility
	Added Japanese locale from http://bible.50webs.org/en/
	Applied Ben Morgan's TEIHTMLHREF filter
	Added TEIHTMLHREF filter to BCB5 project
		
11-May-2008	Troy A. Griffitts <scribe@crosswire.org>
	Applied patch to better handle x-refs in notes
		-Ben Morgan <benpmorgan at gmail dot com>
	Applied patch to better output OSIS in plaintext
		-Ben Morgan <benpmorgan at gmail dot com>
	Updated rawstr and rawstr4 to work consistently
		with buffer sizes
	Updated French locales and added french abbrev
		locales from Dominique Corbex
		<dominique dot corbex at gmail dot com>
	Updated Farsi locales from Peter von Kaehne
		<refdoc at gmx dot net>

16-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Implemented a basic TreeKeyIdx::remove() method

* Release 1.5.10 *

16-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added new vi-utf8.conf Vietnamese locale submitted
		by Daniel Owens <dhowens at pmbx dot net>

11-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added new FileMgr::openFileReadOnly to help centralize
		all file io details

11-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added new RawText4 and RawCom4 drivers which allow
		for a 4 byte record size.  Patch submitted by
		Doug Rintoul <doug_rintoul at sil dot org>

6-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added SWBuf::stripPrefix method which works nice
		for returning and stripping stuff like
		'lemma' from "lemma:G1234"
	Added part params to XMLTag::setAttribute
	Changed OSISStrongs to only strip lemma parts with
		strong prefix
	Applied fix for newer version of gcc which errors if
		create perms are not passed to ::open
		(Deji Akingunola <dakingun at gmail dot com>)
	Modified OSISLemma to only strip lemma parts with